--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@ nav {
                     <span class="tech">API Integration</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="btn btn-primary">Live Demo</a>
-                    <a href="#" class="btn btn-secondary">Code</a>
+                    <!-- <a href="#" class="btn btn-primary">Live Demo</a> -->
+                    <a href="https://github.com/6ankit" class="btn btn-secondary">Code</a>
                 </div>
             </div>
         </div>
@@ -745,8 +745,8 @@ nav {
                     <span class="tech">SQL</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="btn btn-primary">Live Demo</a>
-                    <a href="#" class="btn btn-secondary">Code</a>
+                    <!-- <a href="#" class="btn btn-primary">Live Demo</a> -->
+                    <a href="https://github.com/6ankit" class="btn btn-secondary">Code</a>
                 </div>
             </div>
         </div>
@@ -766,8 +766,8 @@ nav {
                     <span class="tech">SQL</span>
                 </div>
                 <div class="project-links">
-                    <a href="#" class="btn btn-primary">Live Demo</a>
-                    <a href="#" class="btn btn-secondary">Code</a>
+                    <!-- <a href="#" class="btn btn-primary">Live Demo</a> -->
+                    <a href="https://github.com/6ankit" class="btn btn-secondary">Code</a>
                 </div>
             </div>
         </div>
